fixed overflow manager

--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -3113,7 +3113,7 @@ small {
         position: absolute;
         border-bottom: 1px solid #000;
         // width: 100%;
-        z-index: 1;
+        // z-index: 1;
 
         left: 1cm;
         right: 1cm;
@@ -3292,8 +3292,7 @@ small {
   min-height: 20mm;
 
   transform-origin: top left;
-
-  // transition: all .2s ease-out;
+  transition: transform .2s cubic-bezier(.25,.8,.25,1);
 
   &.is--hovered {
   }
